tests/NormalTests/paczka1/fuzzy1/36596651.err
Error in line 13: jTGl1rgJr S874 27,6
Error in line 27: tmy A943 7,5
Error in line 33: qBI A709 86,0
Error in line 36: S874 â709 4,6
Error in line 31: tmy A709 6,8
